Fix sidebar and product list gap

--- a/src/components/organism/SearchResult/SearchResult.module.scss
+++ b/src/components/organism/SearchResult/SearchResult.module.scss
@@ -6,7 +6,7 @@
 
   .filterAndProducts {
     display: flex;
-    gap: 10px;
+    gap: 100px;
   }
 
   @media (min-width: 1920px) {
@@ -19,6 +19,7 @@
     .filterAndProducts {
       display: flex;
       flex-direction: column;
+      gap: $none;
     }
   }
 }
